<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:src="@drawable/logo_mer_principal"/>

        <fup.edu.pruebamercadoagro.Header
            android:id="@+id/headerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/green"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".linearLayuot"
            android:orientation="vertical"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:layout_margin="6dp"
                android:fontFamily="serif"
                android:textColor="@color/green"
                android:text="Principios de la agroecología"
                android:gravity="center"
                android:layout_marginBottom="30dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:background="@drawable/border_linear"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp"
                android:layout_marginBottom="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:fontFamily="serif"
                    android:gravity="left"
                    android:textStyle="bold"
                    android:text="Diversidad"
                    android:textColor="@color/black"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:fontFamily="serif"
                    android:gravity="left"
                    android:text="@string/home_diversidad"
                    android:textColor="@color/gris"
                    android:textSize="14dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="190dp"
                    android:src="@drawable/img_diversidad"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:background="@drawable/border_linear"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp"
                android:layout_marginBottom="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:fontFamily="serif"
                    android:gravity="left"
                    android:textStyle="bold"
                    android:text="Creación de conocimientos"
                    android:textColor="@color/black"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:fontFamily="serif"
                    android:gravity="left"
                    android:text="@string/home_creacion"
                    android:textColor="@color/gris"
                    android:textSize="14dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="300dp"
                    android:src="@drawable/img_creacion"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:background="@drawable/border_linear"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp"
                android:layout_marginBottom="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:fontFamily="serif"
                    android:gravity="left"
                    android:textStyle="bold"
                    android:text="Ciclos de nutrientes"
                    android:textColor="@color/black"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:fontFamily="serif"
                    android:gravity="left"
                    android:text="@string/home_ciclos"
                    android:textColor="@color/gris"
                    android:textSize="14dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="190dp"
                    android:src="@drawable/img_ciclos"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:background="@drawable/border_linear"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp"
                android:layout_marginBottom="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:fontFamily="serif"
                    android:gravity="left"
                    android:textStyle="bold"
                    android:text="Reciclaje de energía"
                    android:textColor="@color/black"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:fontFamily="serif"
                    android:gravity="left"
                    android:text="@string/home_reciclaje"
                    android:textColor="@color/gris"
                    android:textSize="14dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="300dp"
                    android:src="@drawable/img_reciclaje"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:background="@drawable/border_linear"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp"
                android:layout_marginBottom="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:fontFamily="serif"
                    android:gravity="left"
                    android:textStyle="bold"
                    android:text="Sinergias"
                    android:textColor="@color/black"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:fontFamily="serif"
                    android:gravity="left"
                    android:text="@string/home_sinergias"
                    android:textColor="@color/gris"
                    android:textSize="14dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="300dp"
                    android:src="@drawable/img_sinergias"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:background="@drawable/border_linear"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp"
                android:layout_marginBottom="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:fontFamily="serif"
                    android:gravity="left"
                    android:textStyle="bold"
                    android:text="Eficiencia en el uso del agua"
                    android:textColor="@color/black"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:fontFamily="serif"
                    android:gravity="left"
                    android:text="@string/home_eficiencia"
                    android:textColor="@color/gris"
                    android:textSize="14dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="300dp"
                    android:src="@drawable/img_eficiencia"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:background="@drawable/border_linear"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp"
                android:layout_marginBottom="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:fontFamily="serif"
                    android:gravity="left"
                    android:textStyle="bold"
                    android:text="Diseño de sistemas complejos"
                    android:textColor="@color/black"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:fontFamily="serif"
                    android:gravity="left"
                    android:text="@string/home_diseno"
                    android:textColor="@color/gris"
                    android:textSize="14dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="300dp"
                    android:src="@drawable/img_diseno"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:background="@drawable/border_linear"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp"
                android:layout_marginBottom="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:fontFamily="serif"
                    android:gravity="left"
                    android:textStyle="bold"
                    android:text="Resiliencia"
                    android:textColor="@color/black"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:fontFamily="serif"
                    android:gravity="left"
                    android:text="@string/home_resiliencia"
                    android:textColor="@color/gris"
                    android:textSize="14dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="190dp"
                    android:src="@drawable/img_resiliencia"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:background="@drawable/border_linear"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp"
                android:layout_marginBottom="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:fontFamily="serif"
                    android:gravity="left"
                    android:textStyle="bold"
                    android:text="Participación y empoderamiento"
                    android:textColor="@color/black"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:fontFamily="serif"
                    android:gravity="left"
                    android:text="@string/home_participacion"
                    android:textColor="@color/gris"
                    android:textSize="14dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="300dp"
                    android:src="@drawable/img_participacion"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:background="@drawable/border_linear"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:fontFamily="serif"
                    android:gravity="left"
                    android:textStyle="bold"
                    android:text="Solidaridad"
                    android:textColor="@color/black"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:fontFamily="serif"
                    android:gravity="left"
                    android:text="@string/home_solidaridad"
                    android:textColor="@color/gris"
                    android:textSize="14dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="300dp"
                    android:src="@drawable/img_solidaridad"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:layout_margin="6dp"
                android:fontFamily="serif"
                android:textColor="@color/green"
                android:text="Información obtenidad de AgriculturaWiKi"
                android:gravity="center"
                android:layout_marginBottom="30dp"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/green"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" />

        <include layout="@layout/fooder" />

    </LinearLayout>
</ScrollView>