<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="40dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".linearLayuot"
        android:orientation="vertical"
        android:layout_margin="12dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/logo_mer_principal"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:paddingBottom="20dp">

            <Button
                android:id="@+id/btn_ingresar"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:text="@string/iniciar_sesion"
                android:textSize="16dp"
                android:fontFamily="serif"
                android:layout_gravity="center"
                android:layout_margin="6dp"
                android:backgroundTint="@color/black"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/btn_registrarse"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:text="@string/registrarse"
                android:textSize="16dp"
                android:fontFamily="serif"
                android:layout_gravity="center"
                android:backgroundTint="@color/green"
                android:textColor="@color/black" />

        </LinearLayout>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:fontFamily="serif"
            android:text="@string/resumen"
            android:gravity="left"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:fontFamily="serif"
            android:text="@string/resume1"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/green"
            android:padding="40dp"/>

        <Button
            android:id="@+id/btn_verProductos"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="Ver productos"
            android:textSize="16dp"
            android:fontFamily="serif"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:backgroundTint="@color/black"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:fontFamily="serif"
            android:paddingLeft="20dp"
            android:text="Organizaciones aliadas:"
            android:gravity="left"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="80dp"
                    android:src="@drawable/fup_logo"
                    android:padding="2dp"/>
                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="80dp"
                    android:src="@drawable/verdupaz_log"
                    android:padding="2dp"/>
                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="80dp"
                    android:src="@drawable/red_huertas_logo"
                    android:padding="2dp"/>

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="73dp"
                    android:padding="2dp"
                    android:src="@drawable/gentes_sur_logo" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="80dp"
                    android:src="@drawable/federacion_logo"
                    android:padding="2dp"/>
                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="80dp"
                    android:src="@drawable/mambru_logo"
                    android:padding="2dp"/>

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="80dp"
                    android:padding="2dp"
                    android:src="@drawable/tegido_logo" />

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ancestrarl_logo"
                    android:padding="2dp"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/green"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="12dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:fontFamily="serif"
                android:text="Mercado agroecológico 4.0"
                android:gravity="center"
                android:textColor="@color/green"
                android:layout_marginBottom="12dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11dp"
                    android:textStyle="bold"
                    android:fontFamily="serif"
                    android:text="Participantes:"
                    android:textColor="@color/green"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11dp"
                    android:fontFamily="serif"
                    android:text="@string/vista_principal_fooder1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11dp"
                    android:textStyle="bold"
                    android:fontFamily="serif"
                    android:text="Desarrollado por:"
                    android:textColor="@color/green"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11dp"
                    android:fontFamily="serif"
                    android:text="integrantes del semillero INNOVA"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/green"
                android:layout_marginBottom="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11dp"
                    android:fontFamily="serif"
                    android:textStyle="bold"
                    android:text="©Mercado agroecológico 4.0"
                    android:textColor="@color/white"
                    android:layout_margin="12dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11dp"
                    android:fontFamily="serif"
                    android:textStyle="bold"
                    android:text="Todos los derechos reservados"
                    android:textColor="@color/white"
                    android:layout_margin="12dp"/>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>